--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
