--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
+    "react-navigation-redux-helpers": "^4.0.1",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.0"
+    "react-navigation-tabs": "^2.6.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -28,7 +32,8 @@
     "eslint": "6.6.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "redux-devtools": "^3.5.0"
   },
   "jest": {
     "preset": "react-native"
