--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.61.3",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-htmlview": "^0.15.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
