--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-htmlview": "^0.15.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.0.4",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-redux-helpers": "^4.0.1",
