--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-htmlview": "^0.15.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.0.4",
