--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.8.1",
     "GitHubTrending": "^3.1.5",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
