--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.3",
+    "react-native-check-box": "^2.1.7",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-htmlview": "^0.15.0",
