--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-htmlview": "^0.15.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.4.0",
+    "react-native-sortable-listview": "^0.2.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.0.4",
     "react-navigation": "^4.0.10",
